--- a/b.html
+++ b/b.html
@@ -15,6 +15,10 @@
             <td>윤지현</td>
             <td>29</td>
         </tr>
+        <tr>
+            <td>김윤지</td>
+            <td>26</td>
+        </tr>
     </table>
 </body>
 </html>
