--- a/b.html
+++ b/b.html
@@ -19,6 +19,10 @@
             <td>김윤지</td>
             <td>26</td>
         </tr>
+        <tr>
+            <td>양무리</td>
+            <td>??</td>
+        </tr>
     </table>
 </body>
 </html>
